2004-04-30  Chris Toshok  <toshok@ximian.com>

	* util/e-destination.c (e_destination_set_contact): don't use
	"email" twice for a variable name.. even though they don't really
	conflict, it's ugly and confusing.

2004-04-30  Enver ALTIN  <enver.altin@frontsite.com.tr>

	* gui/component/GNOME_Evolution_Addressbook.server.in.in: Fixed a
	type-o.

2004-04-29  Hans Petter Jansson  <hpj@ximian.com>

	* printing/e-contact-print.c: Don't dereference the file_as pointer
	if it turns out to be NULL.

2004-04-28  Jeffrey Stedfast  <fejj@ximian.com>

	* gui/component/addressbook-migrate.c: We need a migration dialog
	if the revision <= 10. Fixes bug #57770.

2004-04-27  Larry Ewing  <lewing@ximian.com>

	* gui/component/addressbook-config.c: remove debug spew.

2004-04-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gui/component/addressbook-migrate.c (addressbook_migrate):
	Migrate pilot data.
	(migrate_pilot_data): Oops. Apparently the addressbook didn't
	change the format of the changelog file from db3 to xml, so fix to
	simply copy the file over.

2004-04-27  Rodney Dawes  <dobey@ximian.com>

	* gui/contact-editor/e-contact-editor-fullname.c:
	(e_contact_editor_fullname_init):
	* gui/contact-editor/fullname.glade:
	* gui/search/e-addressbook-search-dialog.c (eab_search_dialog_init):
	Update dialog vbox and action area border widths to be HIG compliant
	Update main child widget border widths to be HIG compliant

2004-04-27  Larry Ewing  <lewing@ximian.com>

	* gui/component/addressbook-config.c (source_to_dialog_new): fix
	warnings, remove unused code.

	* gui/component/addressbook-config.c: start integrate the new
	dialog.

	* gui/component/ldap-config.glade: add the new dialog.

2004-04-26  Rodney Dawes  <dobey@ximian.com>

	* gui/contact-editor/contact-editor.glade:
	* gui/contact-editor/e-contact-editor.c (e_contact_editor_init):
	Set spacing around notebook widget and the dialog's action area and
	vbox widgets to be compliant with the HIG dialog specs
